--- a/index.html
+++ b/index.html
@@ -143,9 +143,8 @@
             </div>
         </div>
         <div>
-            <video width="700" height="450" controls="controls" poster="image" preload="true">
-              <source src="https://www.youtube.com/watch?v=sVlCX3RiH50" type="video/mp4"/>
-              Your browser does not support the video tag.
+            <video controls="true">
+                <source src="https://www.youtube.com/watch?v=sVlCX3RiH50" type="video/mp4" />
             </video>
          </div>
     </section>
