--- a/index.html
+++ b/index.html
@@ -142,10 +142,8 @@
                 </div>
             </div>
         </div>
-        <div>
-            <video controls="true">
-                <source src="https://www.youtube.com/watch?v=sVlCX3RiH50" type="video/mp4" />
-            </video>
+        <div id="vidcenter">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/sVlCX3RiH50" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </div>
     </section>
 
