--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
         </div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/sVlCX3RiH50" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe style="display: block; margin: auto;" width="560" height="315" src="https://www.youtube.com/embed/sVlCX3RiH50" frameborder="0" allow="accelerometer; allowfullscreen; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
     <!------------------------------------------------------- About Section -->
