--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="author" content="">
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VW6XEC856C"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TZTLX8M06W"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-VW6XEC856C');
+  gtag('config', 'G-TZTLX8M06W');
 </script>
 
     <title>Israel Solomon Web Developer</title>
